--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-requests>=2.20.0
-youtube_dl>=2019.3.18
-python_mpv>=0.3.9
-PyQt5>=5.12.3
-beautifulsoup4>=4.7.1
-mpv>=0.1
+requests>=2.25.1
+youtube_dl>=2021.3.14
+python-mpv>=0.5.2
+PyQt5>=5.15.4
+beautifulsoup4>=4.9.3
+git+git://github.com/z3ntu/QtWaitingSpinner.git@master#egg=QTWaitingSpinner
